@@ -512,6 +512,7 @@ SOURCES =
 	block_cache
 	bloom_filter
 	chained_buffer
+	choker
 	crc32c
 	create_torrent
 	disk_buffer_holder
